# farwas

./: .gitignore  .renovaterc.json  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/farwas/: __init__.py  __main__.py  api.py  cache.py  cli.py  display.py  lister.py
tests/: test_api.py
