[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farwas"
version = "0.1.0"
authors = []
description = "GitHub repository lister"
requires-python = ">=3.13.7"
dependencies = [
    "zoneinfo; python_version < '3.9'",
    "tzdata; platform_system == 'Windows'"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2"
]

[project.scripts]
farwas = "farwas:main"

[tool.ruff.lint]
extend-select = ["I"]
 